src/elements/snapshots/panoramix__elements__label__tests__label_widget-2.snap
---
source: src/elements/label.rs
expression: label_state_2

---
RootWidget(
    Column(
        Label(
            "World",
        ),
    ),
)
