src/elements/snapshots/panoramix__elements__label__tests__label_widget.snap
---
source: src/elements/label.rs
expression: label_state

---
RootWidget(
    Column(
        Label(
            "Hello",
        ),
    ),
)
