src/elements/snapshots/panoramix__elements__label__tests__new_label.snap
---
source: src/elements/label.rs
expression: label
---
Label {
    text: "Hello",
    flex: FlexParams {
        flex: 1.0,
        alignment: None,
    },
}
